--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -46,7 +46,7 @@
          "pgp_user": "Jarbas@Jarbas.ai",
          "pgp_passwd": "'welcome to the mycroft collective",
         // run server on this port
-         "port" : 5000,
+         "port" : 5678,
          "host": "127.0.0.1",
         // allow blacklisted or whitelisted ips only
          "ip_policy": "blacklist",
@@ -106,7 +106,7 @@
   // Jarbas Client Settings
   "jarbas_client": {
          // connect to server in this port
-         "port" : 5000,
+         "port" : 5678,
          // at this ip adress
          "host" : "98.29.104.152",
          // pgp key settings to id server
@@ -444,7 +444,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic"
-    "module": "pymimic",
+    "module": "mimic",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
     },
