--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,6 @@ python-dateutil==2.6.0
 autobahn
 twisted
 python-gnupg
-pyopenssl
 pycrypto
 wptools
 wordnik
@@ -76,3 +75,4 @@ geopy
 nltk
 cleverwrap
 unirest
+skicit-image
