--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -281,6 +281,7 @@
     "sample_rate": 16000,
     "channels": 1,
     "record_wake_words": true,
+    'record_utterances', false,
     "phoneme_duration": 120,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
