recording save path option

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -280,8 +280,13 @@
     "wake_up_module": "snowboy",
     "sample_rate": 16000,
     "channels": 1,
+    // record wake/hot words or not
     "record_wake_words": true,
-    'record_utterances', false,
+    // record sentences or not
+    'record_utterances': false,
+    // omit these fields for saving in /tmp
+    //'wake_word_save_path': "path/for/wuw_recordings/wav",
+    //'utterance_save_path': "path/for/utterance_recordings/wav",
     "phoneme_duration": 120,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
