hot word factory

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -273,43 +273,8 @@
     "ssl": false
   },
 
-  // Settings used by the wake-up-word listener
-  // Override: REMOTE
-  "listener": {
-    "module": "snowboy",
-    "wake_up_module": "snowboy",
-    "sample_rate": 16000,
-    "channels": 1,
-    // record wake/hot words or not
-    "record_wake_words": true,
-    // record sentences or not
-    'record_utterances': false,
-    // omit these fields for saving in /tmp
-    //'wake_word_save_path': "path/for/wuw_recordings/wav",
-    //'utterance_save_path': "path/for/utterance_recordings/wav",
-    "phoneme_duration": 120,
-    "multiplier": 1.0,
-    "energy_ratio": 1.5,
-    // pocketsphinx config
-    "wake_word": "hey jarbas",
-    "phonemes": "HH EY . JH AA R AH SH",
-    "threshold": 1e-90,
-    "standup_word": "wake up",
-    "standup_phonemes": "W EY K . AH P",
-    "standup_threshold": 1e-20,
-
-    // snowboy config
-    "sensitivity": 0.42,
-    "models": {
-        "jarbas": "hey jarbas.pmdl"
-    },
-    "wake_up_sensitivity": 0.41,
-    "wake_up_models": {
-        "wake up": "Wakeup.pmdl"
-    },
-
-    // search for these hot words
-    "hot_words":{
+  // hot word configurations
+  "hot_words":{
         "self destruct":
              {
                 // this could be pocketsphinx instead
@@ -383,7 +348,59 @@
                     }
             }
         }
-      }
+      },
+  // Settings used by the wake-up-word listener
+  // Override: REMOTE
+  "listener": {
+    / listener settings
+    "sample_rate": 16000,
+    "channels": 1,
+    "phoneme_duration": 120,
+    "multiplier": 1.0,
+    "energy_ratio": 1.5,
+    // record wake words or not
+    "record_wake_words": true
+    // record sentences or not
+    'record_utterances': false,
+    // omit these fields for saving in /tmp
+    //'wake_word_save_path': "path/for/wuw_recordings/wav",
+    //'utterance_save_path': "path/for/utterance_recordings/wav",
+
+    "wake_word": "hey jarbas",
+    "standup_word": "wake up",
+
+    // wake word module
+    "wake_word_config": {
+        "module": "snowboy",
+        "sensitivity": 0.42,
+        "models": {
+            "jarbas": "hey jarbas.pmdl"
+        }
+    },
+
+    // wake up word module
+    "standup_config": {
+        "module": "snowboy",
+        "wake_up_sensitivity": 0.41,
+        "wake_up_models": {
+            "wake up": "Wakeup.pmdl"
+        }
+    }
+
+    // pocketsphinx example configs
+    // wake word module
+    //"wake_word_config": {
+    //    "module": "pocketsphinx",
+    //    "phonemes": "HH EY . JH AA R AH SH",
+    //    "threshold": 1e-90
+    //},
+
+    // wake up word module
+    //"standup_config": {
+    //    "module": "snowboy",
+    //        "standup_phonemes": "W EY K . AH P",
+    //        "standup_threshold": 1e-20
+    //}
   },
 
   // Mark 1 enclosure settings
