--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -231,7 +231,7 @@
     // fallback over_ride, ignore user settings and use this order
     "fallback_override": true,
     // fallback priority order, try all for this order
-    "fallback_priority" : ["fallback_server", "LILACS_core",
+    "fallback_priority" : [ "fallback_server", "LILACS_core","fallback_math",
     "fallback_aiml_chatbot", "fallback_cleverbot", "fallback_padatius"],
     // run level to be enforced at start up
     "default_run_level" : "full",
