--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -111,12 +111,27 @@
     "sample_rate": 16000,
     "channels": 1,
     "record_wake_words": false,
-    "wake_word": "hey mycroft",
-    "phonemes": "HH EY . M AY K R AO F T",
+    "record_utterances": false,
     "phoneme_duration": 120,
-    "threshold": 1e-90,
     "multiplier": 1.0,
     "energy_ratio": 1.5
+     // wake word module
+    "wake_word_config": {
+        "module": "pocketsphinx",
+        "wake_word": "hey mycroft",
+        "phonemes": "HH EY . M AY K R AO F T",
+        "threshold": 1e-90,
+        "sample_rate": 16000
+        },
+
+    // wake up word module
+    "standup_config": {
+        "module": "snowboy",
+        "wake_up_sensitivity": 0.41,
+        "wake_up_models": {
+            "wake up": "Wakeup.pmdl"
+            }
+        }
   },
   
   // Mark 1 enclosure settings
@@ -182,6 +197,26 @@
     "train_delay": 4
   },
 
+  // hot word configurations
+  "hot_words": {
+        "thank you": {
+                // wake word engine used
+                "module":"snowboy",
+                // treat this like a full utterance
+                "utterance": "thank you",
+                // trigger listening on this hot word
+                // omited means true
+                "listen": false,
+                "data":{
+                    // adjust sensitivity
+                    "sensitivity": 0.30,
+                    // full model path
+                    "models": {
+                            "thank you": "thank you.pmdl"
+                        }
+                     }
+                }
+      },
   // =================================================================
   // All of the follow are specific to particular skills and will soon
   // be removed from this file.
