standup_word config

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -125,15 +125,13 @@
         },
 
     // wake up word module
-    "standup_config": {
-        "module": "snowboy",
-        "wake_up_sensitivity": 0.41,
-        "wake_up_models": {
-            "wake up": "Wakeup.pmdl"
-            }
+    "standup_word_config": {
+        "module": "pocketsphinx",
+        "standup_word": "wake up",
+        "standup_phonemes": "W EY K . AH P",
+        "standup_threshold": 1e-20
         }
-  },
-  
+  }
   // Mark 1 enclosure settings
   // Override: SYSTEM (e.g. Picroft)
   "enclosure": {
