--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -129,7 +129,8 @@
         "module": "pocketsphinx",
         "standup_word": "wake up",
         "standup_phonemes": "W EY K . AH P",
-        "standup_threshold": 1e-20
+        "standup_threshold": 1e-20,
+        "sample_rate": 16000
         }
   },
   // Mark 1 enclosure settings
