--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -114,7 +114,7 @@
     "record_utterances": false,
     "phoneme_duration": 120,
     "multiplier": 1.0,
-    "energy_ratio": 1.5
+    "energy_ratio": 1.5,
      // wake word module
     "wake_word_config": {
         "module": "pocketsphinx",
