--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -115,24 +115,27 @@
     "phoneme_duration": 120,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
-     // wake word module
-    "wake_word_config": {
+    "wake_word": "hey mycroft",
+    "stand_up_word": "wake up"
+  },
+
+  // Hotword configurations
+  "hotwords": {
+    "hey mycroft"": {
         "module": "pocketsphinx",
-        "wake_word": "hey mycroft",
+        "word": "hey mycroft",
         "phonemes": "HH EY . M AY K R AO F T",
-        "threshold": 1e-90,
-        "sample_rate": 16000
+        "threshold": 1e-90
         },
 
-    // wake up word module
-    "standup_word_config": {
+    "wake up": {
         "module": "pocketsphinx",
-        "standup_word": "wake up",
-        "standup_phonemes": "W EY K . AH P",
-        "standup_threshold": 1e-20,
-        "sample_rate": 16000
+        "word": "wake up",
+        "phonemes": "W EY K . AH P",
+        "threshold": 1e-20
         }
   },
+
   // Mark 1 enclosure settings
   // Override: SYSTEM (e.g. Picroft)
   "enclosure": {
