--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -121,7 +121,7 @@
 
   // Hotword configurations
   "hotwords": {
-    "hey mycroft"": {
+    "hey mycroft": {
         "module": "pocketsphinx",
         "word": "hey mycroft",
         "phonemes": "HH EY . M AY K R AO F T",
