wave file client

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -34,90 +34,11 @@
         //"key_file" : "~/JarbasAI/mycroft/client/webchat/certs/certificate.key",
         },
 
-  // Jarbas Server Settings
-  "jarbas_server": {
-        // certificate file
-        // "cert_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.crt",
-        // key file
-        // "key_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.key",
-        // max connection number -1 for unlimited
-        "max_connections": -1,
-        // pgp key settings to id server
-         "pgp_user": "Jarbas@Jarbas.ai",
-         "pgp_passwd": "'welcome to the mycroft collective",
-        // run server on this port
-         "port" : 5678,
-         "host": "127.0.0.1",
-        // allow blacklisted or whitelisted ips only
-         "ip_policy": "blacklist",
-         "ip_list": [],
-        // allowed messages, reject message types not in this list
-        "message_policy": "whitelist",
-        "message_list": ["recognizer_loop:utterance",
-                                     "names_response",
-                                     "id_update",
-                                     "incoming_file",
-                                     "vision_result",
-                                     "vision.faces.result",
-                                     "vision.feed.result",
-                                     "deep.dream.request",
-                                     "image.classification.request",
-                                     "style.transfer.request",
-                                     "class.visualization.request",
-                                     "face.recognition.request",
-                                     "object.recognition.request",
-                                     "client.pgp.public.request",
-                                     "client.pgp.public.response",
-                                     "client.aes.exchange_complete"
-                                     ],
-        // default blacklisted stuff for new users that connect
-        "forbidden_messages": ["incoming_file",
-                                            "image.classification.request",
-                                            "style.transfer.request",
-                                            "deep.dream.request",
-                                            "class.visualization.request",
-                                            "face.recognition.request",
-                                            "object.recognition.request"],
-        // skill name not folder
-        "forbidden_skills": ["ControlCenterSkill", "LILACSPersonalSkill",
-                            "LILACSTeachSkill", "LILACSUserSkill",
-                            "HotwordSkill", "ClientManagerSkill",
-                            "FeedbackSkill", "TTSSkill", "DreamBotSkill",
-                            "DisplayControlSkill", "DesktopLauncherSkill",
-                            "DreamService", "FaceRecognitionSkill",
-                            "ImageRecognitionSkill", "ObjectRecognitionSkill",
-                            "StyleTransferSkill", "VisionSkill", "AlarmSkill",
-                            "AudioRecordSkill", "ReminderSkill",
-                            "DictationSkill", "ColorizationService"
-                            ],
-        "forbidden_intents": ["IpIntent", "UpdateLocationIntent",
-                              "FollowUserIntent",
-                              "UnFollowUserIntent",
-                              "PostTweetIntent",
-                              "FbLikeRandomPhotoIntent",
-                              "FbAddSuggestedFriendIntent",
-                              "FbAddFriendsofFriendsIntent",
-                              "FbBuildAboutMeIntent",
-                              "FbLastOnlineIntent",
-                              "FbChatPersonIntent",
-                              "FbLikePhotosofPersonIntent"
-                              ]
-        },
-  // Jarbas Client Settings
-  "jarbas_client": {
-         // connect to server in this port
-         "port" : 5678,
-         // at this ip adress
-         "host" : "98.29.104.152",
-         // pgp key settings to id server
-         "pgp_user": "Jarbas@Jarbas.ai",
-         "pgp_passwd": "'welcome to the mycroft collective",
-         // client nickname list
-         "client_names": ["jarbas_client"],
-         // block / accept this message types from server
-         "message_policy" : "blacklist",
-         "message_list" : []
-        },
+  // Wave file client, execute stt from this file and delete it after
+  "wav_client": {
+        "path" : "/tmp/mycroft_in.wav"
+  },
+
 
   // where to save stuff, like dreams and poems
   "database_path" : "/home/user/jarbas_stable/JarbasAI/database",
@@ -483,10 +404,13 @@
     }
   },
 
+  // Padatious NN intent parser settings
   "padatious": {
     "intent_cache": "~/.jarbas/intent_cache",
     "train_delay": 4
   },
+
+  // Audio Backend Settings
   "Audio": {
     "backends": {
       "local": {
@@ -500,6 +424,8 @@
     },
     "default-backend": "local"
   },
+
+  // Display Backend Settings
   "Displays": {
     "backends": {
       "opencv": {
@@ -513,6 +439,93 @@
     },
     "default-backend": "opencv"
   },
+
+  // Jarbas Server Settings
+  "jarbas_server": {
+        // certificate file
+        // "cert_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.crt",
+        // key file
+        // "key_file" : "~/JarbasAI/mycroft/client/server/certs/certificate.key",
+        // max connection number -1 for unlimited
+        "max_connections": -1,
+        // pgp key settings to id server
+         "pgp_user": "Jarbas@Jarbas.ai",
+         "pgp_passwd": "'welcome to the mycroft collective",
+        // run server on this port
+         "port" : 5678,
+         "host": "127.0.0.1",
+        // allow blacklisted or whitelisted ips only
+         "ip_policy": "blacklist",
+         "ip_list": [],
+        // allowed messages, reject message types not in this list
+        "message_policy": "whitelist",
+        "message_list": ["recognizer_loop:utterance",
+                                     "names_response",
+                                     "id_update",
+                                     "incoming_file",
+                                     "vision_result",
+                                     "vision.faces.result",
+                                     "vision.feed.result",
+                                     "deep.dream.request",
+                                     "image.classification.request",
+                                     "style.transfer.request",
+                                     "class.visualization.request",
+                                     "face.recognition.request",
+                                     "object.recognition.request",
+                                     "client.pgp.public.request",
+                                     "client.pgp.public.response",
+                                     "client.aes.exchange_complete"
+                                     ],
+        // default blacklisted stuff for new users that connect
+        "forbidden_messages": ["incoming_file",
+                                            "image.classification.request",
+                                            "style.transfer.request",
+                                            "deep.dream.request",
+                                            "class.visualization.request",
+                                            "face.recognition.request",
+                                            "object.recognition.request"],
+        // skill name not folder
+        "forbidden_skills": ["ControlCenterSkill", "LILACSPersonalSkill",
+                            "LILACSTeachSkill", "LILACSUserSkill",
+                            "HotwordSkill", "ClientManagerSkill",
+                            "FeedbackSkill", "TTSSkill", "DreamBotSkill",
+                            "DisplayControlSkill", "DesktopLauncherSkill",
+                            "DreamService", "FaceRecognitionSkill",
+                            "ImageRecognitionSkill", "ObjectRecognitionSkill",
+                            "StyleTransferSkill", "VisionSkill", "AlarmSkill",
+                            "AudioRecordSkill", "ReminderSkill",
+                            "DictationSkill", "ColorizationService"
+                            ],
+        "forbidden_intents": ["IpIntent", "UpdateLocationIntent",
+                              "FollowUserIntent",
+                              "UnFollowUserIntent",
+                              "PostTweetIntent",
+                              "FbLikeRandomPhotoIntent",
+                              "FbAddSuggestedFriendIntent",
+                              "FbAddFriendsofFriendsIntent",
+                              "FbBuildAboutMeIntent",
+                              "FbLastOnlineIntent",
+                              "FbChatPersonIntent",
+                              "FbLikePhotosofPersonIntent"
+                              ]
+        },
+
+  // Jarbas Client Settings
+  "jarbas_client": {
+         // connect to server in this port
+         "port" : 5678,
+         // at this ip adress
+         "host" : "98.29.104.152",
+         // pgp key settings to id server
+         "pgp_user": "Jarbas@Jarbas.ai",
+         "pgp_passwd": "'welcome to the mycroft collective",
+         // client nickname list
+         "client_names": ["jarbas_client"],
+         // block / accept this message types from server
+         "message_policy" : "blacklist",
+         "message_list" : []
+        },
+
   // =================================================================
   // All of the follow are specific to particular skills and will soon
   // be removed from this file.
