fix source merge messup

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -41,7 +41,7 @@
 
 
   // where to save stuff, like dreams and poems
-  "database_path" : "/home/user/jarbas_stable/JarbasAI/database",
+  "database_path" : "~/database",
 
   // API keys
   "APIS": {
