server / client run levels

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -163,6 +163,15 @@
             "type":"whitelist",
             "skills": []
         },
+        "server":{
+            "type":"blacklist",
+            "skills":["fallback_server", "service_vision", "skill_display_control","skill_playback_control"]
+        },
+		// client
+        "client":{
+            "type":"whitelist",
+            "skills":["fallback_server", "skill_display_control","skill_playback_control"]
+        },
         // all skills
         "full":{
             "type":"blacklist",
