--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -244,7 +244,7 @@
                         }
                      }
                 },
-        "mycroft": {
+        "hey mycroft": {
             "module":"snowboy",
             // play this sound on this hot word
             "sound": "snd/dong.wav",
