--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -135,7 +135,7 @@
     // Directory to look for skills
     "directory": "default",
      // blacklisted skills to not load
-    "blacklisted_skills": ["fallback_server",
+    "blacklisted_skills": [
     "service_vision", "LILACS_curiosity",
     "LILACS_users", "LILACS_teach", "service_deep_dream",
     "service_image_recognition", "service_object_recognition",
@@ -165,12 +165,19 @@
         },
         "server":{
             "type":"blacklist",
-            "skills":["fallback_server", "service_vision", "skill_display_control","skill_playback_control"]
+            "skills":["fallback_server", "service_vision",
+            "skill_display_control","skill_playback_control"
+            ]
         },
 		// client
         "client":{
             "type":"whitelist",
-            "skills":["fallback_server", "skill_display_control","skill_playback_control"]
+            "skills":["fallback_server", "skill_display_control","skill_playback_control", "skill-events",
+            "skill-alarm", "skill-audio-record", "skill-location-tracker",
+            "skill-date-time", "skill-reminder", "skill-stop", "skill_again",
+            "skill_desktop_launcher", "skill_diagnostics", "skill_dictation",
+            "skill_mute", "skill_parrot", "skill_personal",
+            "skill_tts_control", "fallback_aiml_chatbot"]
         },
         // all skills
         "full":{
@@ -205,7 +212,7 @@
   },
 
   // hot word configurations
-  "hot_words": {
+  "hotwords": {
         "self destruct": {
                 // this could be pocketsphinx instead
                 "module":"snowboy",
@@ -232,6 +239,8 @@
                 "module":"snowboy",
                 // treat this like a full utterance
                 "utterance": "thank you",
+                // deactivate by default, super sensitive!
+                "active": false,
                 // start listening on this hot word
                 // omited means true
                 "listen": false,
@@ -259,7 +268,38 @@
                     }
                 }
              },
-         "computer": {
+
+        "hey jarbas": {
+            "module":"snowboy",
+            // play this sound on this hot word
+            "sound": "snd/dong.wav",
+            // treat this like a full utterance
+            // omited means no
+            // start listening on this hot word
+            "listen": true,
+            "data":{
+                "sensitivity": 0.45,
+                "models": {
+                        "jarbas": "hey jarbas.pmdl"
+                    }
+                }
+             },
+        "wake up": {
+            "module":"snowboy",
+            // play this sound on this hot word
+            "sound": "",
+            // treat this like a full utterance
+            // omited means no
+            // start listening on this hot word
+            "listen": true,
+            "data":{
+                "sensitivity": 0.45,
+                "models": {
+                        "wake up": "Wakeup.pmdl"
+                    }
+                }
+             },
+        "computer": {
             "module":"snowboy",
             // play this sound on this hot word
             "sound": "snd/ding.wav",
