--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -435,7 +435,7 @@
   // Text to Speech parameters
   // Override: REMOTE
   "tts": {
-    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic"
+    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak"
     "module": "mimic",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
@@ -447,9 +447,8 @@
       "lang": "english-us",
       "voice": "m1"
     },
-    "morse":{
-        "voice": "recording",
-        "time_step": 0.5
+    "beep_speak":{
+        "time_step": 0.3
     }
   },
 
