multiple hotword fix

--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -155,7 +155,7 @@
     "fallback_priority" : [ "fallback_server", "LILACS_core","fallback_math",
     "fallback_aiml_chatbot", "fallback_cleverbot", "fallback_padatius"],
     // run level to be enforced at start up
-    "default_run_level" : "full",
+    "default_run_level" : "client",
     // run levels
     "run_levels": {
         // no skills
@@ -280,7 +280,8 @@
             "data":{
                 "sensitivity": 0.45,
                 "models": {
-                        "jarbas": "hey jarbas.pmdl"
+                        "jarbas": "hey jarbas2.pmdl",
+                        "jarbas2": "hey jarbas.pmdl"
                     }
                 }
              },
