--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -254,68 +254,68 @@
                      }
                 },
         "hey mycroft": {
-            "module":"snowboy",
-            // play this sound on this hot word
-            "sound": "snd/dong.wav",
-            // treat this like a full utterance
-            // omited means no
-            // start listening on this hot word
-            "listen": true,
-            "data":{
-                "sensitivity": 0.50,
-                "models": {
-                        "mycroft": "Hey Mycroft.pmdl"
+                "module": "snowboy",
+                // play this sound on this hot word
+                "sound": "snd/dong.wav",
+                // treat this like a full utterance
+                // omited means no
+                // start listening on this hot word
+                "listen": true,
+                "data":{
+                    "sensitivity": 0.50,
+                    "models": {
+                            "mycroft": "Hey Mycroft.pmdl"
+                        }
                     }
-                }
-             },
+                 },
 
         "hey jarbas": {
-            "module":"snowboy",
-            // play this sound on this hot word
-            "sound": "snd/dong.wav",
-            // treat this like a full utterance
-            // omited means no
-            // start listening on this hot word
-            "listen": true,
-            "data":{
-                "sensitivity": 0.45,
-                "models": {
-                        "jarbas": "hey jarbas2.pmdl",
-                        "jarbas2": "hey jarbas.pmdl"
+                "module":"snowboy",
+                // play this sound on this hot word
+                "sound": "snd/dong.wav",
+                // treat this like a full utterance
+                // omited means no
+                // start listening on this hot word
+                "listen": true,
+                "data":{
+                    "sensitivity": 0.45,
+                    "models": {
+                            "jarbas": "hey jarbas2.pmdl",
+                            "jarbas2": "hey jarbas.pmdl"
+                        }
                     }
-                }
-             },
+                 },
         "wake up": {
-            "module":"snowboy",
-            // play this sound on this hot word
-            "sound": "",
-            // treat this like a full utterance
-            // omited means no
-            // start listening on this hot word
-            "listen": true,
-            "data":{
-                "sensitivity": 0.45,
-                "models": {
-                        "wake up": "Wakeup.pmdl"
+                "module":"snowboy",
+                // play this sound on this hot word
+                "sound": "",
+                // treat this like a full utterance
+                // omited means no
+                // start listening on this hot word
+                "listen": true,
+                "data":{
+                    "sensitivity": 0.45,
+                    "models": {
+                            "wake up": "Wakeup.pmdl"
+                        }
                     }
-                }
-             },
+                 },
         "computer": {
-            "module":"snowboy",
-            // play this sound on this hot word
-            "sound": "snd/ding.wav",
-            // treat this like a full utterance
-            // false also means no
-            "utterance": false,
-            // start listening on this hot word
-            "listen": true,
-            "data":{
-                "sensitivity": 0.4,
-                "models": {
-                        "computer": "Hey_Computer.pmdl"
+                "module":"snowboy",
+                // play this sound on this hot word
+                "sound": "snd/ding.wav",
+                // treat this like a full utterance
+                // false also means no
+                "utterance": false,
+                // start listening on this hot word
+                "listen": true,
+                "data":{
+                    "sensitivity": 0.4,
+                    "models": {
+                            "computer": "Hey_Computer.pmdl"
+                        }
                     }
                 }
-            }
       },
   // Settings used by the wake-up-word listener
   // Override: REMOTE
@@ -337,40 +337,7 @@
     //'utterance_save_path': "path/for/utterance_recordings/wav",
     //'hotword_save_path': "path/for/hotword_recordings/wav",
     "wake_word": "hey jarbas",
-    "standup_word": "wake up",
-
-    // wake word module
-    "wake_word_config": {
-        "module": "snowboy",
-        "sensitivity": 0.42,
-        "models": {
-            "jarbas": "hey jarbas.pmdl"
-            }
-        },
-
-    // wake up word module
-    "standup_config": {
-        "module": "snowboy",
-        "wake_up_sensitivity": 0.41,
-        "wake_up_models": {
-            "wake up": "Wakeup.pmdl"
-            }
-        }
-
-    // pocketsphinx example configs
-    // wake word module
-    //"wake_word_config": {
-    //    "module": "pocketsphinx",
-    //    "phonemes": "HH EY . JH AA R AH SH",
-    //    "threshold": 1e-90
-    //},
-
-    // wake up word module
-    //"standup_config": {
-    //    "module": "snowboy",
-    //        "standup_phonemes": "W EY K . AH P",
-    //        "standup_threshold": 1e-20
-    //}
+    "standup_word": "wake up"
   },
 
   // Mark 1 enclosure settings
