--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -46,27 +46,29 @@
   // API keys
   "APIS": {
     // Mycroft-core Skills
-    "WolframAlpha": "",
+    "WolframAlpha": "7WE57H-AEJTU5U3HV",
     "Weather": "",
     // TTS Engines
     "snowboy": "",
     // Skills
-    "NASA": "DEMO_KEY",
+    "NASA": "5a8SAafXUXn7t21yfML5EhYoexIZ7HaOXT8fjZ4N",
     "GoogleTraffic": "",
-    "Mashape": "",
+    "Mashape": "RMVFoC2g1MmshMM8RGP4tJe9TtqCp1tTks6jsnG6IEvglDjqqp",
     "Wikimapia": "",
     "Cloudsight": "",
-    "Reddit": "",
-    "Wordnik":"",
+    "Reddit": "FbAAEjaubnqmww",
+    "Wordnik":"39f2ba7ddaef2fe609301073d1e014ba34ecfb7574a20e83c",
     "Cleverbot": "",
+	"ImgurKey": "e56ee056be7d06f",
+    "ImgurSecret": "9cf2e6b1740ea43abce2a6b37510daf45742f52f",
     "Twitter_consumer_key": "",
     "Twitter_consumer_secret": "",
     "Twitter_access_token": "",
     "Twitter_access_secret": "",
     "CloudsightSecret": "",
-    "RedditSecret": ""
+    "RedditSecret": "ZWU5UJRVxwhaEVmnnVGpML2B-ak"
 
-    },
+  },
 
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
