--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -132,30 +132,36 @@
   // General skill values
   // Override: none
   "skills": {
-    // Directory to look for skills
+    // Directory to look for skills, default = JarbasAI/jarbas_skills
     "directory": "default",
+
+    // run level to be enforced at start up
+    "default_run_level" : "standalone",
+
      // blacklisted skills to not load
     "blacklisted_skills": [
-    "service_vision", "LILACS_curiosity",
-    "LILACS_users", "LILACS_teach", "service_deep_dream",
-    "service_image_recognition", "service_object_recognition",
-    "skill_twitter", "skill_facebook", "skill_instagram", "service_colorize",
-     "service_style_transfer", "LILACS_core",
-     "service_face_recognition", "service_browser", "service_client_manager",
-     "service_porn_detection", "service_RBM", "service_vision",
-     "objective_dreambot"],
+        "service_vision", "LILACS_curiosity",
+        "LILACS_users", "LILACS_teach", "service_deep_dream",
+        "service_image_recognition", "service_object_recognition",
+        "skill_twitter", "skill_facebook", "skill_instagram", "service_colorize",
+         "service_style_transfer", "LILACS_core",
+         "service_face_recognition", "service_browser", "service_client_manager",
+         "service_porn_detection", "service_RBM", "service_vision",
+         "objective_dreambot"],
+
     // priority skills to be loaded first
     "priority_skills": ["skill_help",
-    "skill_control_center", "service_client_manager",
-    "service_objectives", "LILACS_storage", "LILACS_core",
-    "skill_playback_control", "skill_display_control"],
-    // fallback over_ride, ignore user settings and use this order
+        "skill_control_center", "service_client_manager",
+        "service_objectives", "LILACS_storage", "LILACS_core",
+        "skill_playback_control", "skill_display_control"],
+
+    // fallback override, ignore user settings and use this order
     "fallback_override": true,
+
     // fallback priority order, try all for this order
     "fallback_priority" : [ "fallback_server", "LILACS_core","fallback_math",
-    "fallback_aiml_chatbot", "fallback_cleverbot", "fallback_padatius"],
-    // run level to be enforced at start up
-    "default_run_level" : "client",
+        "fallback_aiml_chatbot", "fallback_cleverbot", "fallback_padatius"],
+
     // run levels
     "run_levels": {
         // no skills
@@ -178,6 +184,11 @@
             "skill_desktop_launcher", "skill_diagnostics", "skill_dictation",
             "skill_mute", "skill_parrot", "skill_personal",
             "skill_tts_control", "fallback_aiml_chatbot"]
+        },
+        // load all except server fallback
+        "standalone":{
+            "type":"blacklist",
+            "skills":["fallback_server"]
         },
         // all skills
         "full":{
@@ -203,6 +214,8 @@
   },
 
   // The mycroft-core messagebus' websocket
+  // internal websocket, jarbas uses a different port than mycroft-core
+  // ssl untested
   // Override: none
   "websocket": {
     "host": "0.0.0.0",
@@ -212,6 +225,7 @@
   },
 
   // hot word configurations
+  // wake words must also be here
   "hotwords": {
         "self destruct": {
                 // this could be pocketsphinx instead
@@ -404,7 +418,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak"
-    "module": "mimic",
+    "module": "beep_speak",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
     },
