--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -199,7 +199,7 @@
         "dev":{
             "type":"whitelist",
             "skills":["skill_help", "skill_control_center",
-            "skill_epic", "skill_display_control"]
+            "skill-joke", "skill_display_control"]
         }
     }
   },
@@ -418,7 +418,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak"
-    "module": "beep_speak",
+    "module": "pico",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
     },
@@ -431,6 +431,9 @@
     },
     "beep_speak":{
         "time_step": 0.3
+    },
+    "pico":{
+        "lang": "en-US"
     }
   },
 
