--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -417,7 +417,7 @@
   // Text to Speech parameters
   // Override: REMOTE
   "tts": {
-    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak"
+    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak", "pico"
     "module": "pico",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
@@ -431,9 +431,6 @@
     },
     "beep_speak":{
         "time_step": 0.3
-    },
-    "pico":{
-        "lang": "en-US"
     }
   },
 
