--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -418,7 +418,7 @@
   // Override: REMOTE
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak", "pico", "deep_throat"
-    "module": "pico",
+    "module": "beep_speak",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
     },
