--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -417,7 +417,7 @@
   // Text to Speech parameters
   // Override: REMOTE
   "tts": {
-    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak", "pico", "deep_throat"
+    // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak", "pico", "deep_throat", "polly"
     "module": "pico",
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
@@ -431,6 +431,14 @@
     },
     "beep_speak":{
         "time_step": 0.3
+    },
+    "polly":{
+        "voice": "Joanna",
+        "cache": true,
+        "profile": default,
+        "key_id": "KEY_ID",
+        "key": "SECRET_KEY",
+        "region": "us-west-2"
     }
   },
 
