--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -276,7 +276,7 @@
                 // start listening on this hot word
                 "listen": true,
                 "data":{
-                    "sensitivity": 0.50,
+                    "sensitivity": 0.40,
                     "models": {
                             "mycroft": "Hey Mycroft.pmdl"
                         }
@@ -292,10 +292,9 @@
                 // start listening on this hot word
                 "listen": true,
                 "data":{
-                    "sensitivity": 0.45,
+                    "sensitivity": 0.3,
                     "models": {
-                            "jarbas": "hey jarbas2.pmdl",
-                            "jarbas2": "hey jarbas.pmdl"
+                            "jarbas": "hey jarbas2.pmdl"
                         }
                     }
                  },
@@ -326,7 +325,7 @@
                 "data":{
                     "sensitivity": 0.4,
                     "models": {
-                            "computer": "Hey_Computer.pmdl"
+                            "computer": "Hey Computer.pmdl"
                         }
                     }
                 }
@@ -405,8 +404,8 @@
         },
     "ibm":{
     "credential" : {
-        "username": "3972ae46-8569-4b12-9c62-01a272cce6c6",
-        "password": "ncras2wBQoW6"
+        "username": "f69840f9-b1b5-424c-887c-9c40fa35ca2d",
+        "password": "VoMq1bwdclJz"
         }
     },
     "kaldi": {
@@ -435,7 +434,6 @@
     "polly":{
         "voice": "Joanna",
         "cache": true,
-        "profile": default,
         "key_id": "KEY_ID",
         "key": "SECRET_KEY",
         "region": "us-west-2"
