--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -418,6 +418,9 @@
   "tts": {
     // Engine.  Options: "mimic", "google", "marytts", "fatts", "espeak", "spdsay", "morse", "pymimic", "beep_speak", "pico", "deep_throat", "polly"
     "module": "pico",
+    // supported ssml tags, engines may support additional tags
+    "ssml_tags":["speak", "lang", "p", "phoneme", "prosody", "s",
+                        "say-as", "sub", "w"],
     "pymimic": {
       "voice": "../../mycroft_voice_4.0.flitevox"
     },
@@ -436,7 +439,11 @@
         "cache": true,
         "key_id": "KEY_ID",
         "key": "SECRET_KEY",
-        "region": "us-west-2"
+        "region": "us-west-2",
+        // supports ssml ?
+        "ssml", true,
+        // extra tags for this engine only
+        "extra_tags": ["drc", "whispered"]
     }
   },
 
