--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -441,7 +441,7 @@
         "key": "SECRET_KEY",
         "region": "us-west-2",
         // supports ssml ?
-        "ssml", true,
+        "ssml": true,
         // extra tags for this engine only
         "extra_tags": ["drc", "whispered"]
     }
