--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -434,6 +434,16 @@
     "beep_speak":{
         "time_step": 0.3
     },
+    "bing": {
+        "api_key": "62ca8030261f4889b9a48520dfe36b63",
+        "format": "format": ""riff-16khz-16bit-mono-pcm",
+        "gender": "male"
+    },
+    "ibm": {
+        "user": "user",
+        "password": "password",
+        "voice": "en-US_AllisonVoice"
+    },
     "polly":{
         "voice": "Joanna",
         "cache": true,
